# viur-shop

./: .readthedocs.yml  LICENSE  Pipfile  README.md  index.yaml  pyproject.toml  setup.cfg
.github/workflows/: npm-publish.yml  python-publish.yml
docs/: Pipfile  conf.py  index.rst  requirements.txt
js-client/: HttpClient.js  ViURShopClient.js  index.js  package-lock.json  package.json
model/: ER_diagram.asta  order_flow.asta  price_calculation.asta
model/export/: Skeletons.sql
src/viur/shop/: __init__.py  constants.py  exceptions.py  globals.py  price.py  response_types.py  shop.py  types.py  version.py
src/viur/shop/data/: translations.py
src/viur/shop/modules/: __init__.py  abstract.py  address.py  api.py  cart.py  discount.py  discount_condition.py  order.py  shipping.py  shipping_config.py  vat.py  vat_rate.py
src/viur/shop/payment_providers/: __init__.py  abstract.py  amazon_pay.py  invoice.py  paypal_checkout.py  paypal_plus.py  prepayment.py  unzer_abstract.py  unzer_applelepay.py  unzer_applepay.py  unzer_bancontact.py  unzer_card.py  unzer_googlepay.py  unzer_ideal.py  unzer_klarna.py  unzer_paylater_invoice.py  unzer_paypal.py  unzer_sofort.py
src/viur/shop/services/: __init__.py  events.py  hooks.py
src/viur/shop/skeletons/: __init__.py  address.py  article.py  cart.py  discount.py  discount_condition.py  order.py  shipping.py  shipping_config.py  shipping_precondition.py  vat.py  vat_rate.py
src/viur/shop/types/: __init__.py  data.py  dc_scope.py  enums.py  error.py  exceptions.py  price.py  response.py  results.py  typed_dicts.py
src/viur/shop/types_global/: __init__.py  global_var.py  sentinel.py
