[build-system]
requires = [
    "setuptools>=65",
#    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "viur-shop"
dynamic = ["version"]
dependencies = [
    "viur-toolkit>=0.2.0",
    "viur-core>=3.7.0",
    "cachetools>=5.0"
]
requires-python = ">=3.11"
authors = [
    { name = "Sven Eberth", email = "se@mausbrand.de" },
]
maintainers = [
    { name = "Sven Eberth", email = "se@mausbrand.de" },
]
description = "A modular e-commerce extension for the ViUR framework"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["viur", "plugin", "backend", "shop", "ecommerce"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools.dynamic]
version = { attr = "viur.shop.version.__version__" }

[project.optional-dependencies]
unzer = [
    "unzer~=1.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Documentation = "https://viur-shop.readthedocs.io"
Repository = "https://github.com/viur-framework/viur-shop.git"
"Bug Tracker" = "https://github.com/viur-framework/viur-shop/issues"
Changelog = "https://github.com/viur-framework/viur-shop/releases"
